example-app-3/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-3
  labels:
    app: example-app-3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app-3
  template:
    metadata:
      labels:
        app: example-app-3
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
