example-app-3/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-3
spec:
  selector:
    app: example-app-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
