example-app-3/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-3
spec:
  ingressClassName: nginx
  rules:
    - host: example-app-3.ingress.lab.2rioffice.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-app-3
                port:
                  number: 80
